# cad-agent

./: .gitignore  README.md  pyproject.toml
cad_agent/: __init__.py  __main__.py  advanced.py  agent.py  assembly.py  config.py  draw_cli.py  drawings.py  results.py  viewer.py
cad_agent/_vendored/: __init__.py
cad_agent/_vendored/cad_agent3/: __init__.py  __main__.py  build123d_reference.py  builder.py  builder_v2.py  design_chat.py  emitter.py  engine.py  ensemble_design.py  fcstd_to_assembly.py  fitter.py  gemini_codegen.py  image_to_shape.py  llm_fitter.py  orchestrator.py  reference.py  render_preview.py  scanner.py  shape_generator.py  stdparts.py  validator.py  verifier.py
cad_agent/_vendored/cad_agent3/knowledge/: kb_loader.py
cad_agent/_vendored/cad_agent3/operations/: README.md  __init__.py  catalog.py  operation_base.py
cad_agent/_vendored/cad_agent3/reasoning/: README.md  constraint_analyst.py  decomposer.py  reasoning_session.py  researcher.py  spec_critic.py  topology_chooser.py
cad_agent/_vendored/cad_agent3/session/: __init__.py  artifact_registry.py  checkpoint.py  dependency_graph.py  design_session.py  operation_log.py
cad_agent/_vendored/rapcad_drawings/: __init__.py  builder.py  geometry.py  model3d.py  placement.py  renderer.py  schema.py  spatial_index.py  standards.py  title_block.py  validator.py
tests/: test_agent_generate.py  test_assembly.py  test_detail_views.py  test_drawings_api.py  test_drawings_bracket.py  test_drawings_flange.py  test_drawings_llm.py  test_drawings_multipart.py  test_drawings_multiview.py  test_drawings_smart.py  test_hlr.py  test_public_api.py  test_stdparts.py  test_viewer.py
(+96 files in other folders)
